--- a/README
+++ b/README
@@ -2,15 +2,21 @@
 
 UberLameKit, the following dependecies are required to function:
 
-+ bcrypt + crypt + optparse + thread
++ bcrypt + crypt + optparse + thread + 
 
 file > master.py
 
 -E <engine>
 * unhash
+* bruteforce
 -D <dictionary>
 -T <target file>
+-U <target username>
+-H <target hostname>
+-A <attack type>
 
 IE: To begin cracking with unhash
 ./master.py -E unhash -D dictionary.txt -T salt.txt
 
+IE: To begin brute forcing with ssh
+./master.py -E bruteforce -A ssh -U root -D dictionary.txt
